# cirrus-scripts

./: .gitignore  .gitmodules  00.batch-dedupe.sh  00.merge-dedupe  00.merge-dedupe.sh  01.giawarc.pbs  01.giawarc.sh  01.giawarc.slurm  01.giawarcProyag.sh  01.giawarcProyag.slurm  01.pdf2warc  01.pdf2warc.sh  01.preprocess.job  01.warc2text  01.warc2text.sh  02.clean  02.giamerge  02.giashard  02.giashard.sh  02.shard.check.sh  02.shard.csd3  02.shard.sh  02.shard.slurm  02.shardmerge.csd3  02.shardset.csd3  02.split-text  02.split-text.job  02.split-text.pbs  02.split-text.slurm  03.batch  03.batch.slurm  03.shard.slurm  03.split-text  03.split-text.check.sh  03.split-text.pbs  03.split-text.sh  03.split-text.slurm  03.split-text_manual  04.translate  04.translate.check.sh  (+115 more)
config.d/: 00.defaults.sh  10.cirrus.sh  10.csd3.sh  10.lumi.sh
env/: clean.sh  init.sh  setup.sh  shell.sh
env/init.d/: aliases.sh  cirrus.sh  csd3.sh  lumi.sh
env/setup.d/: apertium  apertium-cat  apertium-es-gl  apertium-eu-es  apertium-lex-tools  apertium-oc-es  apertium-spa  apertium-spa-cat  batch_dedupe  bicleaner  bicleaner-ai  bicleaner-hardrules  bifixer  bleualign  boost  cg3  docalign  env  giamerge  giashard  giawarc  go  gperftools  hunspell  icu4c  internetarchive  jieba  kenlm  libzip  lttoolbox  lzma  marian-dev  marian-fbgemm  mecab  merge_sort  moses2  paracrawl  parallel  preprocess  protobuf  (+7 more)
env/src/paracrawl/: CMakeLists.txt  README.md
env/src/paracrawl/src/: CMakeLists.txt  batch_dedupe_main.cc  compressed_file_stream.hh  gzip_file_stream.cc  gzip_file_stream.hh  merge_sort_main.cc
models/: translate-apertium.sh  translate-bergamot.sh  translate-moses.sh  translate-opus-norm+sp.sh  translate-opus-norm+tok+bpe.sh
models/ca-es/: bisect.sh  translate.sh
models/eu-es/: translate.sh
models/gl-es/: bisect.sh  translate.sh
models/ka-en/: env.sh  translate.sh
models/oc-es/: translate.sh
(+2 files in other folders)
